--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "type": "module",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongodb": "^6.9.0"
   }
 }
