--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@eslint/js": "^9.10.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
+    "@types/validator": "^13.12.2",
     "dotenv": "^16.4.5",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
@@ -28,6 +29,7 @@
   "type": "module",
   "dependencies": {
     "express": "^4.21.0",
-    "mongodb": "^6.9.0"
+    "mongodb": "^6.9.0",
+    "validator": "^13.12.0"
   }
 }
